welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:10: error: ';' expected but 'else' found.
    else if (estSurBiscuit()){
    ^